--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "camelcase": "^6.2.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.7"
+    "express-handlebars": "^5.2.0",
+    "nodemon": "^2.0.7",
+    "pug": "^3.0.0"
   }
 }
