--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "camelcase": "^6.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
-    "nodemon": "^2.0.7",
-    "pug": "^3.0.0"
+    "nodemon": "^2.0.7"
   }
 }
