--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "camelcase": "^6.2.0",
     "express": "^4.17.1",
+    "express-handlebars": "^5.2.0",
     "nodemon": "^2.0.7"
   }
 }
