--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "license": "ISC",
   "dependencies": {
     "camelcase": "^6.2.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
+    "mongodb": "^3.6.4",
     "nodemon": "^2.0.7",
     "uniq": "^1.0.1"
   },
