--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Ashley Keuning",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "camelcase": "^6.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
