--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "mongodb": "^3.6.4",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.7",
     "uniq": "^1.0.1"
   },
